--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,11 @@
 {
     "version": 2,
+    "builds": [
+        {
+        "src": "api/index.php",
+        "use": "@vercel/php"
+        }
+    ],
     "functions": {
         "api/index.php": { "runtime": "vercel-php@0.3.1" }
     },
