--- a/vercel.json
+++ b/vercel.json
@@ -6,6 +6,9 @@
         "use": "@vercel/php"
         }
     ],
+    "functions": {
+        "api/index.php": { "runtime": "vercel-php@0.3.1" }
+    },
     "routes": [
         {
             "src": "/(.*)",
